Added animated text on the landing page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section class="hero">
     <div class="hero-content">
         <div class="hero-text">
-            <h1><img src="assets/lvgd_black_logo.svg" alt="LiveGuard" class="black-logo"><span data-i18n="sectionHero.title">MODERATES YOUR LIVESTREAM SO YOU DON'T HAVE TO</span></h1>
+            <h1><img src="assets/lvgd_black_logo.svg" alt="LiveGuard" class="black-logo"><span class="typed-word"></span><br><span data-i18n="sectionHero.title"> YOUR LIVESTREAM SO YOU DON'T HAVE TO</span></h1>
             <p data-i18n="sectionHero.description">
                 Stay focused on your content while our real-time AI editor keeps your stream safe, compliant, and free from bans and demonetization, all with the power to customize your experience.
             </p>
