Added discord server link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                     <!-- <li><a href="#" data-lang="fr">FR</a></li> -->
                 </ul>
             </li>
-            <li><a data-i18n="nav.tryBtn" href="join" class="button">Join the Waitlist!</a></li>
+            <li><a href="https://discord.gg/BMTmMMAwUc" class="button">
+                <span data-i18n="nav.tryBtn">Join our Discord</span>
+                <img src="assets/discord.svg" alt="Discord" style="margin-left: 0.5rem; width: 18px; height: 18px;" />
+            </a></li>
         </ul>
         </nav>
     </div>
@@ -199,7 +202,15 @@
     <h2 data-i18n="trySection.title">INTERESTED IN BETA TESTING?</h2>
     <p data-i18n="trySection.description">We are always looking for content creators to help us build our platform and bring new ideas to the table!</p>
     <div class="action-button">
-        <a data-i18n="trySection.moreBtn" href="mailto:contact@liveguard.ca" class="dark-button">Contact us!</a>
+        <a href="https://discord.gg/BMTmMMAwUc" class="dark-button">
+            <span data-i18n="trySection.moreBtn1">Join our Discord</span>
+            <img src="assets/discord.svg" alt="Discord" />
+        </a>
+        <span style="padding-inline: 0.5rem;"><b data-i18n="trySection.condition">OR</b></span>
+        <a href="mailto:contact@liveguard.ca" class="dark-button">
+            <span data-i18n="trySection.moreBtn2">Contact us!</span>
+            <img src="assets/gmail.svg" alt="Email" />
+        </a>
     </div>
   </section>
 
@@ -217,6 +228,7 @@
     <div class="footer-section">
       <h3 data-i18n="footer.contactSection.title">Reach us here:</h3>
       <div class="footer-icons">
+        <a href="https://discord.gg/BMTmMMAwUc" target="_blank" rel="noopener"><img src="assets/discord.svg" alt="Discord" width="20" /></a>
         <a href="mailto:contact@liveguard.ca" target="_blank" rel="noopener"><img src="assets/gmail.svg" alt="Email" width="20" /></a>
         <a href="https://www.linkedin.com/company/liveguard" target="_blank" rel="noopener"><img src="assets/linkedin.svg" alt="LinkedIn" width="20" /></a>
         <a href="https://www.instagram.com/liveguard.ca/" target="_blank" rel="noopener"><img src="assets/instagram.svg" alt="Instagram" width="20" /></a>
