Added new images

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </p>
         </div>
         <div class="features-image customize only-mobile">
-            <img src="assets/app_browser.png" class="app-browser">
+            <img src="assets/app_editor.png" class="app-browser">
         </div>
     </div>
     </section>
@@ -179,11 +179,11 @@
                 <span data-i18n="featuresSection.feature3.title">Seamless integration</span>
             </h1>
             <p data-i18n="featuresSection.feature3.description">
-                Seamlessly integrates with your favorite streaming tools, Twitch, YouTube, and more, without disrupting your workflow. Enjoy full compatibility, multistreaming, and stream analytics.
+                Seamlessly integrates with your favorite streaming platforms, Twitch, YouTube, and more, without disrupting your workflow. Enjoy full compatibility with OBS, Streamlabs, and other popular encoders.
             </p>
         </div>
         <div class="features-image integration">
-            <img src="assets/obs_studio_app.png" class="obs-app">
+            <img src="assets/app_add_platform.png" class="obs-app">
         </div>
     </div>
     </section>
