Fixed the second image feature

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <section class="features">
     <div class="features-content">
         <div class="features-image customize only-pc">
-            <img src="assets/app_browser.png" class="app-browser">
+            <img src="assets/app_editor.png" class="app-browser">
         </div>
         <div class="features-text">
             <h1>
