Added FAQ to i18n.js in english

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             <p data-i18n="featuresSection.feature1.description">
                 Stay focused on your content while our AI moderates in real time, keeping your stream safe, compliant, and free from strikes, bans, and demonetization.
             </p>
-            <div class="action-button">
+            <!-- <div class="action-button">
                 <a data-i18n="featuresSection.moreBtn" href="how-it-works" class="dark-button">See it in action</a>
-            </div>
+            </div> -->
         </div>
         <div class="features-image realtime">
             <img src="assets/twitch_browser.png" class="twitch-browser">
@@ -273,41 +273,41 @@
                 <!-- Do you store my stream keys? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faq.q1">Do you store my stream keys?</span>
+                        <span class="q" data-i18n="faqSection.q1">Do you store my stream keys?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faq.a1">
-                        Yes, but keys are locked away once saved; hence. you cannot view them afterwards. You can rotate or delete them at any time. We are constantly working to improve our security measures to ensure your data is safe with us.
+                    <div class="a" data-i18n="faqSection.a1">
+                        Yes, but keys are locked away once saved, which is why you cannot view them afterwards. You can update or delete them at any time. We are constantly working to improve our security measures to ensure your data is safe with us.
                     </div>
                 </details>
                 <!-- What do you run on my computer? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faq.q1">What do you run on my computer?</span>
+                        <span class="q" data-i18n="faqSection.q2">What do you run on my computer?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faq.a1">
-                        Nothing extra. Streamwise runs in the cloud as a secure middleman between your encoder (e.g. OBS) and your platforms.
+                    <div class="a" data-i18n="faqSection.a2">
+                        Nothing. Streamwise runs in the cloud as a secure middleman between your recording tool and your streaming platforms.
                     </div>
                 </details>
                 <!-- What platforms/tools is it compatible with? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faq.q1">What platforms/tools is it compatible with?</span>
+                        <span class="q" data-i18n="faqSection.q3">What platforms/tools is it compatible with?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faq.a1">
-                        Any destination that accepts RTMP with H.264 video (and AAC audio). Works with OBS/Streamlabs and platforms like Twitch, YouTube, and Kick.
+                    <div class="a" data-i18n="faqSection.a3">
+                        Any destination that accepts the standard streaming protocol. Works with recording tools like OBS or Streamlabs and platforms like Twitch, YouTube, and Kick.
                     </div>
                 </details>
                 <!-- How much latency does it introduce? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faq.q1">How much latency does it introduce?</span>
+                        <span class="q" data-i18n="faqSection.q4">How much latency does it introduce?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faq.a1">
-                        A little. Expect ~3 to 5 seconds of additional latency depending on your region, bitrate, and settings. We continuously optimize to keep this low.
+                    <div class="a" data-i18n="faqSection.a4">
+                        We only introduce about 3 to 5 seconds of additional latency depending on your region and stream settings. We continuously optimize to keep this as low as possible.
                     </div>
                 </details>
             </div>
