Added social links and fixed footer

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
             </div>
 
             <div>
+                <li><a href="https://www.linkedin.com/company/streamwise-gg" target="_blank" rel="noopener">
+                    <img src="assets/linkedin-black.svg" alt="LinkedIn" class="social-link" />
+                </a></li>
+                <li><a href="https://www.tiktok.com/@streamwise.gg" target="_blank" rel="noopener">
+                    <img src="assets/tiktok-black.svg" alt="TikTok" class="social-link" />
+                </a></li>
+                <li><a href="https://www.instagram.com/streamwise.gg/" target="_blank" rel="noopener">
+                    <img src="assets/instagram-black.svg" alt="Instagram" class="social-link" />
+                </a></li>
                 <li class="lang-dropdown">
                     <button class="lang-toggle">
                         <img src="assets/globe.svg" alt="Language" class="lang-icon" />
