Added language flag for toggle

--- a/index.html
+++ b/index.html
@@ -71,16 +71,8 @@
             </div>
 
             <div>
-                <li><a href="https://www.linkedin.com/company/streamwise-gg" target="_blank" rel="noopener">
-                    <img src="assets/linkedin-black.svg" alt="LinkedIn" class="social-link" />
-                </a></li>
-                <li><a href="https://www.tiktok.com/@streamwise.gg" target="_blank" rel="noopener">
-                    <img src="assets/tiktok-black.svg" alt="TikTok" class="social-link" />
-                </a></li>
-                <li><a href="https://www.instagram.com/streamwise.gg/" target="_blank" rel="noopener">
-                    <img src="assets/instagram-black.svg" alt="Instagram" class="social-link" />
-                </a></li>
                 <li class="lang-dropdown">
+                    <span class="lang-preview"><b data-i18n="nav.lang">EN</b></span>
                     <button class="lang-toggle">
                         <img src="assets/globe.svg" alt="Language" class="lang-icon" />
                     </button>
@@ -90,6 +82,15 @@
                         <!-- <li><a href="#" data-lang="fr">FR</a></li> -->
                     </ul>
                 </li>
+                <li><a href="https://www.linkedin.com/company/streamwise-gg" target="_blank" rel="noopener">
+                    <img src="assets/linkedin-black.svg" alt="LinkedIn" class="social-link" />
+                </a></li>
+                <li><a href="https://www.tiktok.com/@streamwise.gg" target="_blank" rel="noopener">
+                    <img src="assets/tiktok-black.svg" alt="TikTok" class="social-link" />
+                </a></li>
+                <li><a href="https://www.instagram.com/streamwise.gg/" target="_blank" rel="noopener">
+                    <img src="assets/instagram-black.svg" alt="Instagram" class="social-link" />
+                </a></li>
                 <li><a href="https://discord.gg/BMTmMMAwUc" class="button">
                     <span data-i18n="nav.tryBtn">Join our Discord</span>
                     <img src="assets/discord.svg" alt="Discord" style="margin-left: 0.5rem; width: 18px; height: 18px;" />
