--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E8SMDYMNX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJGZ2YW1WP"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-0E8SMDYMNX');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-LJGZ2YW1WP');
     </script>
+
 
     <!-- Language -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -71,6 +72,7 @@
 
             <div>
                 <li class="lang-dropdown">
+                    <span class="lang-preview"><b data-i18n="nav.lang">EN</b></span>
                     <button class="lang-toggle">
                         <img src="assets/globe.svg" alt="Language" class="lang-icon" />
                     </button>
@@ -80,9 +82,21 @@
                         <!-- <li><a href="#" data-lang="fr">FR</a></li> -->
                     </ul>
                 </li>
-                <li><a href="https://discord.gg/BMTmMMAwUc" class="button">
-                    <span data-i18n="nav.tryBtn">Join our Discord</span>
-                    <img src="assets/discord.svg" alt="Discord" style="margin-left: 0.5rem; width: 18px; height: 18px;" />
+                <li><a href="https://www.linkedin.com/company/streamwise-gg" target="_blank" rel="noopener">
+                    <img src="assets/linkedin-black.svg" alt="LinkedIn" class="social-link" />
+                </a></li>
+                <li><a href="https://www.tiktok.com/@streamwise.gg" target="_blank" rel="noopener">
+                    <img src="assets/tiktok-black.svg" alt="TikTok" class="social-link" />
+                </a></li>
+                <li><a href="https://www.instagram.com/streamwise.gg/" target="_blank" rel="noopener">
+                    <img src="assets/instagram-black.svg" alt="Instagram" class="social-link" />
+                </a></li>
+                <li><a href="https://discord.gg/BMTmMMAwUc">
+                    <img src="assets/discord.svg" alt="Discord" class="social-link" />
+                </a></li>
+                <li><a href="https://app.streamwise.gg" class="button">
+                    <span data-i18n="nav.tryBtn">Open App</span>
+                    <img src="assets/bolt-white.svg" alt="App" style="margin-left: 0.5rem; width: 18px; height: 18px;" />
                 </a></li>
             </div>
         </ul>
@@ -98,7 +112,7 @@
                 <p data-i18n="sectionHero.description">
                     Real-time AI audio/video moderation that blocks bans, prevents demonetization, and adapts to your style — so you can stream stress-free.
                 </p>
-                <a data-i18n="sectionHero.actionBtn" href="mailto:contact@streamwise.gg" class="dark-button">Book a demo</a>
+                <a data-i18n="sectionHero.actionBtn" href="https://app.streamwise.gg" class="dark-button">Register Now</a>
             </div>
         </div>
         <div class="hero-banner">
