updated app link to join

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li><a href="https://discord.gg/BMTmMMAwUc">
                     <img src="assets/discord-black.svg" alt="Discord" class="social-link" />
                 </a></li>
-                <li><a href="https://app.streamwise.gg" class="button">
+                <li><a href="https://app.streamwise.gg/join" class="button">
                     <span data-i18n="nav.tryBtn">Open App</span>
                     <img src="assets/redirect.svg" alt="App" style="margin-left: 0.5rem; width: 18px; height: 18px;" />
                 </a></li>
@@ -112,7 +112,7 @@
                 <p data-i18n="sectionHero.description">
                     Real-time AI audio/video moderation that blocks bans, prevents demonetization, and adapts to your style — so you can stream stress-free.
                 </p>
-                <a data-i18n="sectionHero.actionBtn" href="https://app.streamwise.gg" class="dark-button">Register Now</a>
+                <a data-i18n="sectionHero.actionBtn" href="https://app.streamwise.gg/join" class="dark-button">Register Now</a>
             </div>
         </div>
         <div class="hero-banner">
