removed extra button

--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
         <h2 data-i18n="creatorSection.title">CREATOR FIRST</h2>
         <p data-i18n="creatorSection.description1">We believe livestreaming should be fun, creative, and safe for all content creators. No matter the platform, you deserve the freedom to own your stream and share your best content-without the fear of mistakes, sudden copyright strikes or unfair ToS violations.</p>
         <p data-i18n="creatorSection.description2">In a world where creators face constant pressure to produce more and better content, we're building a platform and community that offers the support and tools they need to thrive.</p>
-        <div class="action-button">
+        <!-- <div class="action-button">
             <a data-i18n="creatorSection.moreBtn" href="mailto:contact@streamwise.gg" class="dark-button">See how this benefits you</a>
-        </div>
+        </div> -->
     </section>
 
     <!-- Pricing Section -->
