Added twitchcon banner

--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
         </nav>
     </div>
     </header>
+    <div class="twitchcon-banner" id="twitchconBanner">
+        <div class="twitchcon-banner-content">
+            <img src="https://upload.wikimedia.org/wikipedia/en/3/3e/TwitchCon_2025_10th_Anniversary_Logo.png" alt="TwitchCon 2025 Logo" class="twitchcon-logo" />
+            <span class="twitchcon-text">Meet us at <b>TwitchCon 2025</b>, San Diego from Oct 17 to 19 to get early access to the app.</span>
+            <a href="https://app.streamwise.gg/join" class="twitchcon-button">I got an invite code</a>
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <section class="hero">
