added partners section

--- a/index.html
+++ b/index.html
@@ -352,6 +352,33 @@
         </div>
     </section>
 
+    <!-- Partners Section -->
+    <section class="partners">
+        <h2 data-i18n="partnerSection.title">OUR PARTNERS</h2>
+        <div class="partners-image-row">
+            <div class="partners-image-item">
+                <a href="https://www.mcgill.ca/engine/" target="_blank">
+                    <img src="assets/engine-logo.png" alt="McGill Engine Logo">
+                </a>
+            </div>
+            <div class="partners-image-item">
+                <a href="https://www.nextcanada.com/next-ai/" target="_blank">
+                    <img src="assets/nextai-logo.png" alt="NEXT AI Logo">
+                </a>
+            </div>
+            <div class="partners-image-item">
+                <a href="https://mila.quebec/en" target="_blank">
+                    <img src="assets/mila-logo.png" alt="MILA Logo">
+                </a>
+            </div>
+            <div >
+                <a class="partners-image-item" href="https://creativedestructionlab.com/" target="_blank">
+                    <img src="assets/cdl-logo.png" alt="CDL Logo">
+                </a>
+            </div>
+        </div>
+    </section>
+
   <!-- Footer -->
   <footer>
     <div class="footer-section">
