Applied changes from FAQ doc

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <span data-i18n="featuresSection.feature2.title">Unlimited possibilities</span>
             </h1>
             <p data-i18n="featuresSection.feature2.description">
-                Think beyond basic protection filters. Our modular tools let you personalize your stream your way — with full transparency and flexibility.
+                Think beyond basic protection filters. Our modular tools let you personalize your stream your way, with full transparency and flexibility, by detecting custom keywords in audio in real time, and applying edits to the stream based on your defined events.
             </p>
         </div>
         <div class="features-image customize only-mobile">
@@ -230,7 +230,7 @@
             </div>
         </div>
         <h2 data-i18n="creatorSection.title">CREATOR FIRST</h2>
-        <p data-i18n="creatorSection.description1">We believe livestreaming should be fun, creative, and safe for all content creators. No matter the platform, you deserve the freedom to own your stream and share your best content-without the fear of mistakes, sudden copyright strikes or unfair ToS violations.</p>
+        <p data-i18n="creatorSection.description1">We believe livestreaming should be fun, creative, and safe for independant content creators of any scale. No matter the platform, you deserve the freedom to own your stream and share your best content-without the fear of mistakes, sudden copyright strikes or unfair ToS violations.</p>
         <p data-i18n="creatorSection.description2">In a world where creators face constant pressure to produce more and better content, we're building a platform and community that offers the support and tools they need to thrive.</p>
         <!-- <div class="action-button">
             <a data-i18n="creatorSection.moreBtn" href="mailto:contact@streamwise.gg" class="dark-button">See how this benefits you</a>
@@ -242,7 +242,7 @@
         <div class="pricing-content">
             <div class="pricing-text">
                 <h1 data-i18n="pricingSection.title">Pricing</h1>
-                <p data-i18n="pricingSection.description">All prices in USD, per month.</p>
+                <p data-i18n="pricingSection.description">Streamwise has a tier-based pricing system based on the number of hours you stream per month.</p>
             </div>
 
             <div class="pricing-grid">
@@ -291,44 +291,64 @@
             </div>
 
             <div class="faq-accordion" role="list">
+                <!-- How easy is it to set up? -->
+                <details class="faq-item">
+                    <summary>
+                        <span class="q" data-i18n="faqSection.qsetup">How easy is it to set up?</span>
+                        <span class="caret" aria-hidden="true"></span>
+                    </summary>
+                    <div class="a" data-i18n="faqSection.asetup">
+                        Streamwise is designed to be as easy to set up as possible. We use a one time setup system, meaning you’ll only need to access our web dashboard for the initial setup, and if you want to modify some action or reaction events.
+                    </div>
+                </details>
                 <!-- Do you store my stream keys? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faqSection.q1">Do you store my stream keys?</span>
+                        <span class="q" data-i18n="faqSection.qstreamkeys">Do you store my stream keys?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faqSection.a1">
+                    <div class="a" data-i18n="faqSection.astreamkeys">
                         Yes, but keys are locked away once saved, which is why you cannot view them afterwards. You can update or delete them at any time. We are constantly working to improve our security measures to ensure your data is safe with us.
                     </div>
                 </details>
                 <!-- What do you run on my computer? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faqSection.q2">What do you run on my computer?</span>
+                        <span class="q" data-i18n="faqSection.qmycomputer">What do you run on my computer?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faqSection.a2">
+                    <div class="a" data-i18n="faqSection.amycomputer">
                         Nothing. Streamwise runs in the cloud as a secure middleman between your recording tool and your streaming platforms.
                     </div>
                 </details>
                 <!-- What platforms/tools is it compatible with? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faqSection.q3">What platforms/tools is it compatible with?</span>
+                        <span class="q" data-i18n="faqSection.qcompatible">What platforms/tools is it compatible with?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faqSection.a3">
+                    <div class="a" data-i18n="faqSection.acompatible">
                         Any destination that accepts the standard streaming protocol. Works with recording tools like OBS or Streamlabs and platforms like Twitch, YouTube, and Kick.
                     </div>
                 </details>
                 <!-- How much latency does it introduce? -->
                 <details class="faq-item">
                     <summary>
-                        <span class="q" data-i18n="faqSection.q4">How much latency does it introduce?</span>
+                        <span class="q" data-i18n="faqSection.qlatency">How much latency does it introduce?</span>
                         <span class="caret" aria-hidden="true"></span>
                     </summary>
-                    <div class="a" data-i18n="faqSection.a4">
+                    <div class="a" data-i18n="faqSection.alatency">
                         We only introduce about 3 to 5 seconds of additional latency depending on your region and stream settings. We continuously optimize to keep this as low as possible.
+                    </div>
+                </details>
+                <!-- What languages does the model work on? -->
+                <details class="faq-item">
+                    <summary>
+                        <span class="q" data-i18n="faqSection.qlang">What languages does your model work on?</span>
+                        <span class="caret" aria-hidden="true"></span>
+                    </summary>
+                    <div class="a" data-i18n="faqSection.alang">
+                        Currently we only support English, but future support for other languages is being worked on.
                     </div>
                 </details>
             </div>
