added privacy policy

--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
     <div class="footer-section">
       <div class="logo">Streamwise</div>
       <div>Made with ❤️ in Montreal</div>
+      <a href="privacy">Privacy Policy</a>
     </div>
     <!-- <div class="footer-section">
       <h3 data-i18n="footer.aboutSection.title">About</h3>
